force-app/main/default/objects/Loot_Campaign__c/Loot_Campaign__c.object-meta.xml
<CustomObject>
    <label>Loot Campaign</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>Loot Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loot Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>