force-app/main/default/objects/Loot_Campaign__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Campaign Active?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>