force-app/main/default/objects/Loot_Campaign__c/listViews/West_Region_Campaigns.listView-meta.xml
<ListView>
    <fullName>West_Region_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>West Region Campaigns</label>
</ListView>